--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ Es el orden para generar los estilos:
 4. Visuales --> box-shadow, border-radius, gradient, etc
 5. Otros --> reglas CSS y más
 */
-:root{
+:root {
     /*Colores */
-    --bitcoin-orange:#F7931A;
+    --bitcoin-orange: #F7931A;
     --soft-orange: #FFE9D5;
     --secondary-blue: #1A9AF7;
     --soft-blue: #E7F5FF;
@@ -19,18 +19,18 @@ Es el orden para generar los estilos:
     --just-white: #fff;
 }
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-html{
+html {
     font-size: 62.5%;
     font-family: 'DM Sans', sans-serif;
 }
 
-header{
+header {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -39,16 +39,18 @@ header{
     min-width: 320px;
     height: 334px;
     text-align: center;
-    background:linear-gradient(207.8deg, #201E1C 16.69%, #F7931A 100%);;
+    background: linear-gradient(207.8deg, #201E1C 16.69%, #F7931A 100%);
+    ;
 }
 
-header img{
+header img {
     align-self: center;
     width: 150px;
     height: 24px;
     margin-top: 60px;
 }
-.header--title-container{
+
+.header--title-container {
     width: 90%;
     min-width: 288px;
     max-width: 900px;
@@ -58,16 +60,44 @@ header img{
     align-self: center;
 }
 
-.header--title-container h1{
+.header--title-container h1 {
     font-size: 2.4rem;
     font-weight: bold;
     line-height: 2.6rem;
     color: var(--just-white);
 }
 
-.header--title-container p{
+.header--title-container p {
     margin-top: 25px;
-    font-size:1.4rem;
+    font-size: 1.4rem;
     line-height: 1.8rem;
     color: var(--soft-orange);
+}
+
+.header--title-container .header--button {
+    position: absolute;
+    left: calc(50% - 118px);
+    top: 270px;
+    display: block;
+    margin-top: 35px;
+    padding: 15px;
+    width: 229px;
+    height: 48px;
+    background-color: var(--off-white);
+    /* Sombras */
+    box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
+    border: none;
+    border-radius: 5px;
+    font-size: 1.4rem;
+    font-weight: bold;
+    text-decoration: none;
+    color: var(--black);
+}
+
+.header--button span{
+    display: inline-block;
+    width: 13px;
+    height: 8px;
+    margin-left: 10px;
+    background-image: url('./assets/icons/down-arrow.svg');
 }
