Reto aun no completado

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ main {
     color: #757575;
 }
 
-.main-currency-table{
+.main-currency-table, .main-commissions-table{
     width: 70%;
     min-width: 235px;
     max-width: 500px;
@@ -161,12 +161,18 @@ main {
     font-family: 'Inter',sans-serif;
 }
 
-.main-currency-table .currency-table--title{
+.main-currency-table .currency-table--title, .main-commissions-table .commissions-table-title{
     margin-bottom: 15px;
     font-size: 1.8rem;
     font-weight: bold;
-    line-height: 2.3rem;
+    line-height: 2.3rem;    
+}
+.main-currency-table .currency-table--title{
     color: var(--bitcoin-orange);
+}
+.main-commissions-table .commissions-table-title{
+    color: var(--secondary-blue);
+
 }
 
  .currency-table--container{
@@ -217,6 +223,17 @@ main {
     height: 15px;
     margin-left: 10px;
     background-image: url('./assets/icons/trending-down.svg');
+    background-size: cover;
+    background-position:center;
+    background-repeat: no-repeat;
+}
+
+.currency-table--container .up{
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-left: 10px;
+    background-image: url('./assets/icons/trending-up.svg');
     background-size: cover;
     background-position:center;
     background-repeat: no-repeat;
