--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ main {
 
 }
 
- .currency-table--container{
+ .currency-table--container, .comissions-table-container{
      width: 90%;
      min-width: 230px;
      max-width: 300px;
@@ -183,12 +183,12 @@ main {
      margin: 0 auto;
  }
 
- .currency-table--container table{
+ .currency-table--container table , .comissions-table-container table{
      width: 100%;
      height: 100%;
  }
 
- .currency-table--container td{
+ .currency-table--container td ,.comissions-table-container td{
      width: 50%;
      font-size: 1.6rem;
      font-weight: 500;
@@ -197,20 +197,20 @@ main {
      background-color: var(--just-white);
  }
 
-.currency-table--container .table__top-left{
+.currency-table--container .table__top-left, .comissions-table-container .table__top-left {
     border-radius: 15px 0 0 0;
 }
-.currency-table--container .table_top-right{
+.currency-table--container .table_top-right, .comissions-table-container .table_top-right {
     border-radius: 0 15px 0 0;
 }
-.currency-table--container .table__bottom-left{
+.currency-table--container .table__bottom-left , .comissions-table-container .table__bottom-left{
     border-radius: 0 0 0 15px;
 }
-.currency-table--container .table__bottom-right{
+.currency-table--container .table__bottom-right, .comissions-table-container .table__bottom-right {
     border-radius: 0 0 15px 0;
 }
 
-.currency-table--container .table__right{
+.currency-table--container .table__right, .comissions-table-container .table__right   {
     font-size: 1.4rem;
     font-weight: normal;
     line-height: 1.7rem;
