--- a/style.css
+++ b/style.css
@@ -238,3 +238,27 @@ main {
     background-position:center;
     background-repeat: no-repeat;
 }
+
+.currency-table--date{
+    background-color:var(--soft-orange) ;
+}
+
+.comissions-table--date {
+    background-color: var(--soft-blue);
+}
+
+.currency-table--date, .comissions-table--date {
+    width: 190px;
+    height: 30px;
+    margin: 0 auto;
+    margin-top: 15px;
+    padding: 8px;
+    border-radius: 8px;    
+}
+
+.currency-table--date p, .comissions-table--date p {
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    font-weight: 300;
+    color: var(--warm-black);
+}
