--- a/style.css
+++ b/style.css
@@ -152,113 +152,174 @@ main {
     color: #757575;
 }
 
-.main-currency-table, .main-commissions-table{
+.main-currency-table,
+.main-commissions-table {
     width: 70%;
     min-width: 235px;
     max-width: 500px;
     height: 360px;
     margin: 0 auto;
-    font-family: 'Inter',sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 
-.main-currency-table .currency-table--title, .main-commissions-table .commissions-table-title{
+.main-currency-table .currency-table--title,
+.main-commissions-table .commissions-table-title {
     margin-bottom: 15px;
     font-size: 1.8rem;
     font-weight: bold;
-    line-height: 2.3rem;    
+    line-height: 2.3rem;
 }
-.main-currency-table .currency-table--title{
+
+.main-currency-table .currency-table--title {
     color: var(--bitcoin-orange);
 }
-.main-commissions-table .commissions-table-title{
+
+.main-commissions-table .commissions-table-title {
     color: var(--secondary-blue);
 
 }
 
- .currency-table--container, .comissions-table-container{
-     width: 90%;
-     min-width: 230px;
-     max-width: 300px;
-     height: 250px;
-     margin: 0 auto;
- }
+.currency-table--container,
+.comissions-table-container {
+    width: 90%;
+    min-width: 230px;
+    max-width: 300px;
+    height: 250px;
+    margin: 0 auto;
+}
 
- .currency-table--container table , .comissions-table-container table{
-     width: 100%;
-     height: 100%;
- }
+.currency-table--container table,
+.comissions-table-container table {
+    width: 100%;
+    height: 100%;
+}
 
- .currency-table--container td ,.comissions-table-container td{
-     width: 50%;
-     font-size: 1.6rem;
-     font-weight: 500;
-     line-height: 1.9rem;
-     color: var(--grey);
-     background-color: var(--just-white);
- }
+.currency-table--container td,
+.comissions-table-container td {
+    width: 50%;
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.9rem;
+    color: var(--grey);
+    background-color: var(--just-white);
+}
 
-.currency-table--container .table__top-left, .comissions-table-container .table__top-left {
+.currency-table--container .table__top-left,
+.comissions-table-container .table__top-left {
     border-radius: 15px 0 0 0;
 }
-.currency-table--container .table_top-right, .comissions-table-container .table_top-right {
+
+.currency-table--container .table_top-right,
+.comissions-table-container .table_top-right {
     border-radius: 0 15px 0 0;
 }
-.currency-table--container .table__bottom-left , .comissions-table-container .table__bottom-left{
+
+.currency-table--container .table__bottom-left,
+.comissions-table-container .table__bottom-left {
     border-radius: 0 0 0 15px;
 }
-.currency-table--container .table__bottom-right, .comissions-table-container .table__bottom-right {
+
+.currency-table--container .table__bottom-right,
+.comissions-table-container .table__bottom-right {
     border-radius: 0 0 15px 0;
 }
 
-.currency-table--container .table__right, .comissions-table-container .table__right   {
+.currency-table--container .table__right,
+.comissions-table-container .table__right {
     font-size: 1.4rem;
     font-weight: normal;
     line-height: 1.7rem;
     color: #757575;
 }
 
-.currency-table--container .down{
+.currency-table--container .down {
     display: inline-block;
     width: 15px;
     height: 15px;
     margin-left: 10px;
     background-image: url('./assets/icons/trending-down.svg');
     background-size: cover;
-    background-position:center;
+    background-position: center;
     background-repeat: no-repeat;
 }
 
-.currency-table--container .up{
+.currency-table--container .up {
     display: inline-block;
     width: 15px;
     height: 15px;
     margin-left: 10px;
     background-image: url('./assets/icons/trending-up.svg');
     background-size: cover;
-    background-position:center;
+    background-position: center;
     background-repeat: no-repeat;
 }
 
-.currency-table--date{
-    background-color:var(--soft-orange) ;
+.currency-table--date {
+    background-color: var(--soft-orange);
 }
 
 .comissions-table--date {
     background-color: var(--soft-blue);
 }
 
-.currency-table--date, .comissions-table--date {
+.currency-table--date,
+.comissions-table--date {
     width: 190px;
     height: 30px;
     margin: 0 auto;
     margin-top: 15px;
     padding: 8px;
-    border-radius: 8px;    
+    border-radius: 8px;
 }
 
-.currency-table--date p, .comissions-table--date p {
+.currency-table--date p,
+.comissions-table--date p {
     font-size: 1.2rem;
     line-height: 1.5rem;
     font-weight: 300;
     color: var(--warm-black);
+}
+
+
+.main-product-detail {
+    position: relative;
+    width: 100%;
+    min-width: 320px;
+    height: auto;
+    padding: 20px 10px;
+    background-color: var(--warm-black);
+}
+
+.product-detail--batata-logo {
+    position: absolute;
+    width: 40px;
+    height: 25px;
+    background-image: url(./assets/icons/batata.svg);
+    top: -10px;
+    left: calc(50% - 20px);
+}
+
+.product-detail--title {
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 50px;
+    text-align: center;
+}
+
+.product-detail--title h2 {
+    margin-bottom: 20px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}
+
+.product-detail--title p {
+    margin-bottom: 20px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
 }
