--- a/style.css
+++ b/style.css
@@ -481,7 +481,7 @@ main {
     color: var(--black);
 }
 
-.plan-card--price{
+.plan-card--price {
     padding: 5px 0;
     font-size: 5.2rem;
     font-weight: bold;
@@ -489,7 +489,7 @@ main {
     color: black;
 }
 
-.plan-card--price span{
+.plan-card--price span {
     font-size: 1.2rem;
     font-weight: 500;
     vertical-align: text-top;
@@ -498,4 +498,26 @@ main {
 .plan-card--saving {
     font-size: 1.2rem;
     color: #757575;
+}
+
+.plan-card--ca {
+    width: 150px;
+    height: 48px;
+    margin-top: 20px;
+    background-color: #faf8f7;
+    border: 2px solid var(--bitcoin-orange);
+    border-radius: 4px;
+    font-family: "DM Sans", "sans-serif";
+    font-size: 1.4rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--black);
+}
+
+.plan-card--ca span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-image: url("./assets/icons/orange-right-arrow.svg");
+    vertical-align: text-bottom;
 }
