--- a/style.css
+++ b/style.css
@@ -459,6 +459,19 @@ main {
     box-shadow: 0 4px 8px rgba(89, 73, 30, 0.16);
 }
 
+.plans-container--card-vip {
+    position: relative;
+    width: 70%;
+    min-width: 230px;
+    max-width: 300px;
+    height: 250px;
+    margin: 50px auto 0;
+    padding: 0 15px;
+    background-color: var(--black);
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(89, 73, 30, 0.16);
+}
+
 .recommended {
     position: absolute;
     width: 120px;
@@ -470,7 +483,19 @@ main {
     background-color: var(--bitcoin-orange);
     border-radius: 8px;
     color: var(--just-white);
+}
 
+.free {
+    position: absolute;
+    width: 120px;
+    height: 31px;
+    padding: 6px;
+    left: calc(50% - 60px);
+    top: -15px;
+    font-size: 1.2rem;
+    background-color: var(--secondary-blue);
+    border-radius: 8px;
+    color: var(--just-white);
 }
 
 .plan-card--title {
@@ -481,6 +506,15 @@ main {
     color: var(--black);
 }
 
+.plan-card--title-vip{
+    padding-top: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: var(--just-white);
+}
+
+
 .plan-card--price {
     padding: 5px 0;
     font-size: 5.2rem;
@@ -489,6 +523,13 @@ main {
     color: black;
 }
 
+.plan-card--price-vip {
+    padding: 5px 0;
+    font-size: 5.2rem;
+    font-weight: bold;
+    line-height: 5.3rem;
+    color: var(--just-white);
+}
 .plan-card--price span {
     font-size: 1.2rem;
     font-weight: 500;
