--- a/style.css
+++ b/style.css
@@ -446,13 +446,22 @@ main {
     color: #757575;
 }
 
+.plans-container--slider {
+    display: flex;
+    height: 316px;
+    overflow-x: scroll;
+    overscroll-behavior-x:contain;
+    scroll-snap-type: x proximity;
+}
+
 .plans-container--card {
     position: relative;
+    scroll-snap-align: center;
     width: 70%;
     min-width: 230px;
     max-width: 300px;
     height: 250px;
-    margin: 50px auto 0;
+    margin: 50px 30px 0;
     padding: 0 15px;
     background-color: var(--just-white);
     border-radius: 15px;
@@ -461,11 +470,12 @@ main {
 
 .plans-container--card-vip {
     position: relative;
+    scroll-snap-align: center;
     width: 70%;
     min-width: 230px;
     max-width: 300px;
     height: 250px;
-    margin: 50px auto 0;
+    margin: 50px 30px 0;
     padding: 0 15px;
     background-color: var(--black);
     border-radius: 15px;
@@ -506,7 +516,7 @@ main {
     color: var(--black);
 }
 
-.plan-card--title-vip{
+.plan-card--title-vip {
     padding-top: 30px;
     font-size: 1.4rem;
     font-weight: 500;
@@ -530,6 +540,7 @@ main {
     line-height: 5.3rem;
     color: var(--just-white);
 }
+
 .plan-card--price span {
     font-size: 1.2rem;
     font-weight: 500;
